# ChipAudio

./: CMakeLists.txt  README.md
doxygen/: Doxyfile  mainpage.dox
examples/generative/: CMakeLists.txt  generative.cpp  main.cpp
examples/prelude/: CMakeLists.txt  main.cpp  prelude.cpp
examples/script/: CMakeLists.txt  script.cpp
examples/sfx/: CMakeLists.txt  main.cpp  sfx.cpp
include/: Add.hpp  Channel.hpp  Chip.hpp  EnvelopeADSR.hpp  Event.hpp  FilterLP1Pole.hpp  Invert.hpp  Module.hpp  ModuleChain.hpp  MoveableAtomic.hpp  Multiply.hpp  NoteToFrequency.hpp  Notes.hpp  Oscillator.hpp  Pattern.hpp  PortAudioHandler.hpp  SPSCRingBuffer.hpp  Sample.hpp  Sampler.hpp  StereoEffectChannel.hpp  Subtract.hpp  TimeSignature.hpp  TimeValue.hpp  Value.hpp  WaveTable.hpp  chipaudio.hpp  chipmodules.hpp  chipscript.hpp
src/: CMakeLists.txt  Channel.cpp  Chip.cpp  EnvelopeADSR.cpp  Module.cpp  Oscillator.cpp  Pattern.cpp  PortAudioHandler.cpp  TimeValue.cpp  chipscript.cpp
